build_log_2.txt

> plaquita.com@0.0.2 build
> vite build

[36mvite v5.4.21 [32mbuilding for production...[36m[39m
(node:24356) [DEP0040] DeprecationWarning: The `punycode` module is deprecated. Please use a userland alternative instead.
(Use `node --trace-deprecation ...` to show where the warning was created)
transforming...
node:internal/process/promises:394
    triggerUncaughtException(err, true /* fromPromise */);
    ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: D:/linkedinclient/designer_tool): [Error] Loading PostCSS Plugin failed: Cannot find module 'autoprefixer'
Require stack:
- D:\linkedinclient\designer_tool\postcss.config.js

(@D:\linkedinclient\designer_tool\postcss.config.js)
Error: Loading PostCSS Plugin failed: Cannot find module 'autoprefixer'
Require stack:
- D:\linkedinclient\designer_tool\postcss.config.js

(@D:\linkedinclient\designer_tool\postcss.config.js)
    at load (file:///D:/linkedinclient/designer_tool/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33632:11)
    at file:///D:/linkedinclient/designer_tool/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33657:16
    at Array.map (<anonymous>)
    at plugins (file:///D:/linkedinclient/designer_tool/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33656:8)
    at processResult (file:///D:/linkedinclient/designer_tool/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33726:14)
    at file:///D:/linkedinclient/designer_tool/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33856:14]

Node.js v22.13.0
